{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 152,
  "lineage": "3aa07278-fd50-0434-b06c-7560a19171ac",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "s1hAdNsoB88=",
            "id": "projects/nse-data-engineering/global/securityPolicies/nse-deploy-mage-security-policy",
            "name": "nse-deploy-mage-security-policy",
            "project": "nse-data-engineering",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "4.247.172.221/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/securityPolicies/nse-deploy-mage-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/regions/asia-south1/networkEndpointGroups/nse-deploy-mage-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-23T21:53:23.913-07:00",
            "enable_cdn": false,
            "fingerprint": "PUqpMy2e7RE=",
            "generated_id": 8379581343391158060,
            "id": "projects/nse-data-engineering/global/backendServices/nse-deploy-mage-urlmap-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "nse-deploy-mage-urlmap-backend-default",
            "port_name": "http",
            "project": "nse-data-engineering",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/nse-data-engineering/global/securityPolicies/nse-deploy-mage-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/backendServices/nse-deploy-mage-urlmap-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.36.1.50",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-23T21:48:29.191-07:00",
            "id": "projects/nse-data-engineering/global/addresses/nse-deploy-mage-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "nse-deploy-mage-urlmap-address",
            "prefix_length": 0,
            "project": "nse-data-engineering",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/addresses/nse-deploy-mage-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/nse-data-engineering/global/forwardingRules/nse-deploy-mage-urlmap",
            "ip_address": "34.36.1.50",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "nse-deploy-mage-urlmap",
            "port_range": "80-80",
            "project": "nse-data-engineering",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/forwardingRules/nse-deploy-mage-urlmap",
            "target": "https://www.googleapis.com/compute/beta/projects/nse-data-engineering/global/targetHttpProxies/nse-deploy-mage-urlmap-http-proxy"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-23T21:54:21.535-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/nse-data-engineering/global/targetHttpProxies/nse-deploy-mage-urlmap-http-proxy",
            "name": "nse-deploy-mage-urlmap-http-proxy",
            "project": "nse-data-engineering",
            "proxy_bind": false,
            "proxy_id": 3484047043814625042,
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/targetHttpProxies/nse-deploy-mage-urlmap-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/urlMaps/nse-deploy-mage-urlmap-url-map"
          },
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-23T21:54:09.220-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/backendServices/nse-deploy-mage-urlmap-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "YILJWjEoLnA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/nse-data-engineering/global/urlMaps/nse-deploy-mage-urlmap-url-map",
            "map_id": 9021895923006050078,
            "name": "nse-deploy-mage-urlmap-url-map",
            "path_matcher": [],
            "project": "nse-data-engineering",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nse-data-engineering/global/urlMaps/nse-deploy-mage-urlmap-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_security_policy.policy",
            "google_filestore_instance.instance",
            "google_project_service.cloudrun",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}